tests/sksl/errors/ArrayReturnTypes.glsl
### Compilation failed:

error: 1: functions may not return type 'float4x4[2]'
float4x4[2] return_float4x4_2() {}
^^^^^^^^
error: 2: functions may not return type 'int[1]'
int[1]      return_int_1()      {}
^^^
2 errors
